# aki

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  log.txt
aki/: log - Copy.cc  log - Copy.h  log.cc  log.h  util.cc  util.h
test/: test.cc
